--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
 
     <section class="sobre">
         <div class="extras">
-            
+            <img src="images/image.png" alt="" width="200" >
+            <div class="social-media">
+                <a href=""><img src="images/59439.png" alt="" width="50"></a>
+                <a href=""><img src="images/insta.jpg" alt="" width="50"></a>
+                <a href=""><img src="images/X-Logo.png" alt="" width="50"></a>
+            </div>
+        </div>
+        <div class="center">
+            <div class="texto-sobre">
+                <h1>It's not just Coffe<br/>It's <span style="color: #017143;">Starbucks</span> </h1>
+                <button class="btn">Lena More</button>
+            </div>
         </div>
     </section>
     
